// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`client/messaging/common-message-layout/TextMessage > cozy layouts > continuation with an emoji-only message 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jCHTsB QWJgs sc-fvpurI ejEquZ"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-bkkgYE loByek sc-haThUj kQXZOa sc-eySzLJ cEJetd"
      tabindex="0"
    >
      <span
        class="sc-cfJLes fYZCLU"
      >
        <i
          aria-hidden="true"
          class="sc-kTqJeW iGVA-Di"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-kTqJeW iGVA-Di"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-hmvloj sc-cTAITq hlERxc zyBSG"
    >
      <div
        class="sc-bkkgYE loByek sc-knKKcV dvglrg"
        tabindex="-1"
      >
        <span
          class="sc-cQMBOM iFevVI"
        >
          🔥
        </span>
      </div>
      <div
        class="sc-bkkgYE loByek sc-knKKcV dvglrg"
        tabindex="-1"
      >
        <span
          class="sc-cQMBOM iFevVI"
        >
          🔥
        </span>
      </div>
       
      <div
        class="sc-bkkgYE loByek sc-knKKcV dvglrg"
        tabindex="-1"
      >
        <span
          class="sc-cQMBOM iFevVI"
        >
          🎉
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > cozy layouts > continuation with plain text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jCHTsB QWJgs sc-fvpurI ejEquZ"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-bkkgYE loByek sc-haThUj kQXZOa sc-eySzLJ cEJetd"
      tabindex="0"
    >
      <span
        class="sc-cfJLes fYZCLU"
      >
        <i
          aria-hidden="true"
          class="sc-kTqJeW iGVA-Di"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-kTqJeW iGVA-Di"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-hmvloj sc-cTAITq hlERxc zyBSG"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > cozy layouts > header whose text mentions the self user 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jCHTsB esBpEf sc-gLDjOb fmQPny"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      aria-hidden="true"
      class="sc-hIaeua jgwLnf"
    >
      <div
        class="sc-jHkWmS dbMFua sc-jnrVmt fMGeRM"
      >
        <div
          class="sc-dtMhIu fZwdxn sc-bQtLLP gxAxJG"
        />
      </div>
    </div>
    <div>
      <span
        class="sc-dwsoFP fDfdvp sc-leSMyW ljEqVg"
        tabindex="0"
      >
        <span
          aria-label="Username loading…"
          class="sc-jtXFsC fVJDfL"
        >
                     
        </span>
      </span>
      <div
        class="sc-bkkgYE loByek sc-bXdOnr izvZhB"
        tabindex="0"
      >
        <span
          class="sc-kjOPSs iFssiQ"
        >
          <i
            aria-hidden="true"
            class="sc-kTqJeW iGVA-Di"
          >
             [
          </i>
          12:00 AM
          <i
            aria-hidden="true"
            class="sc-kTqJeW iGVA-Di"
          >
            ]
          </i>
        </span>
      </div>
    </div>
    <span
      class="sc-hmvloj sc-cTAITq hlERxc zyBSG"
    >
      Hey
       
      <span
        class="sc-dwsoFP fDfdvp sc-gsFBvc fVPjex"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-jtXFsC fVJDfL"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > cozy layouts > header with a message-link chip 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jCHTsB QWJgs sc-gLDjOb fmQPny"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      aria-hidden="true"
      class="sc-hIaeua jgwLnf"
    >
      <div
        class="sc-jHkWmS dbMFua sc-jnrVmt fMGeRM"
      >
        <div
          class="sc-dtMhIu fZwdxn sc-bQtLLP gxAxJG"
        />
      </div>
    </div>
    <div>
      <span
        class="sc-dwsoFP fDfdvp sc-leSMyW ljEqVg"
        tabindex="0"
      >
        <span
          aria-label="Username loading…"
          class="sc-jtXFsC fVJDfL"
        >
                     
        </span>
      </span>
      <div
        class="sc-bkkgYE loByek sc-bXdOnr izvZhB"
        tabindex="0"
      >
        <span
          class="sc-kjOPSs iFssiQ"
        >
          <i
            aria-hidden="true"
            class="sc-kTqJeW iGVA-Di"
          >
             [
          </i>
          12:00 AM
          <i
            aria-hidden="true"
            class="sc-kTqJeW iGVA-Di"
          >
            ]
          </i>
        </span>
      </div>
    </div>
    <span
      class="sc-hmvloj sc-cTAITq hlERxc zyBSG"
    >
      see this: 
      <a
        class="sc-kLnvaL gwaszs"
        href="https://shieldbattery.net/chat/1/some-channel?m=9b2e8d0e-5f3a-4a2b-8c1d-6f5e4d3c2b1a"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        <span
          aria-hidden="true"
          class="sc-bdvwhi cfLMd sc-hUpmGu gbQHva"
        >
          chat
        </span>
        <span
          aria-label="Channel name loading…"
          class="sc-hLVYED easJdp"
        >
                     
        </span>
        <span
          class="sc-cRKKwI gAfWJn"
        >
          ›
        </span>
        <span
          class="sc-lheWVM gERopF"
        >
          message
        </span>
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > cozy layouts > header with plain text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jCHTsB QWJgs sc-gLDjOb fmQPny"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      aria-hidden="true"
      class="sc-hIaeua jgwLnf"
    >
      <div
        class="sc-jHkWmS dbMFua sc-jnrVmt fMGeRM"
      >
        <div
          class="sc-dtMhIu fZwdxn sc-bQtLLP gxAxJG"
        />
      </div>
    </div>
    <div>
      <span
        class="sc-dwsoFP fDfdvp sc-leSMyW ljEqVg"
        tabindex="0"
      >
        <span
          aria-label="Username loading…"
          class="sc-jtXFsC fVJDfL"
        >
                     
        </span>
      </span>
      <div
        class="sc-bkkgYE loByek sc-bXdOnr izvZhB"
        tabindex="0"
      >
        <span
          class="sc-kjOPSs iFssiQ"
        >
          <i
            aria-hidden="true"
            class="sc-kTqJeW iGVA-Di"
          >
             [
          </i>
          12:00 AM
          <i
            aria-hidden="true"
            class="sc-kTqJeW iGVA-Di"
          >
            ]
          </i>
        </span>
      </div>
    </div>
    <span
      class="sc-hmvloj sc-cTAITq hlERxc zyBSG"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message as a normal text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jCHTsB QWJgs"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-bkkgYE loByek sc-haThUj kQXZOa"
      tabindex="0"
    >
      <span
        class="sc-cfJLes fYZCLU"
      >
        <i
          aria-hidden="true"
          class="sc-kTqJeW iGVA-Di"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-kTqJeW iGVA-Di"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-dwsoFP fDfdvp sc-leSMyW ljEqVg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jtXFsC fVJDfL"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-kTqJeW iGVA-Di"
    >
      : 
    </i>
    <span
      class="sc-hmvloj hlERxc"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message mixing emoji and text renders them inline-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jCHTsB QWJgs"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-bkkgYE loByek sc-haThUj kQXZOa"
      tabindex="0"
    >
      <span
        class="sc-cfJLes fYZCLU"
      >
        <i
          aria-hidden="true"
          class="sc-kTqJeW iGVA-Di"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-kTqJeW iGVA-Di"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-dwsoFP fDfdvp sc-leSMyW ljEqVg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jtXFsC fVJDfL"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-kTqJeW iGVA-Di"
    >
      : 
    </i>
    <span
      class="sc-hmvloj hlERxc"
    >
      nice game 
      <div
        class="sc-bkkgYE loByek sc-knKKcV dvglrg"
        tabindex="-1"
      >
        <span
          class="sc-cQMBOM kvmvRP"
        >
          🔥
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message sent as an emote reads as an action line 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jCHTsB QWJgs"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-bkkgYE loByek sc-haThUj kQXZOa"
      tabindex="0"
    >
      <span
        class="sc-cfJLes fYZCLU"
      >
        <i
          aria-hidden="true"
          class="sc-kTqJeW iGVA-Di"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-kTqJeW iGVA-Di"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gqtqYm cXHXwG"
    >
      * 
    </span>
    <span
      class="sc-dwsoFP fDfdvp sc-leSMyW sc-cxVPNz ljEqVg vbiyC"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jtXFsC fVJDfL"
      >
                   
      </span>
    </span>
     
    <span
      class="sc-hmvloj sc-bnOOOA hlERxc fdLhpz"
    >
      waves at everyone
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jCHTsB QWJgs"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-bkkgYE loByek sc-haThUj kQXZOa"
      tabindex="0"
    >
      <span
        class="sc-cfJLes fYZCLU"
      >
        <i
          aria-hidden="true"
          class="sc-kTqJeW iGVA-Di"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-kTqJeW iGVA-Di"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-dwsoFP fDfdvp sc-leSMyW ljEqVg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jtXFsC fVJDfL"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-kTqJeW iGVA-Di"
    >
      : 
    </i>
    <span
      class="sc-hmvloj hlERxc"
    >
      here is a link 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link before a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jCHTsB QWJgs"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-bkkgYE loByek sc-haThUj kQXZOa"
      tabindex="0"
    >
      <span
        class="sc-cfJLes fYZCLU"
      >
        <i
          aria-hidden="true"
          class="sc-kTqJeW iGVA-Di"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-kTqJeW iGVA-Di"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-dwsoFP fDfdvp sc-leSMyW ljEqVg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jtXFsC fVJDfL"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-kTqJeW iGVA-Di"
    >
      : 
    </i>
    <span
      class="sc-hmvloj hlERxc"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-dwsoFP fDfdvp sc-gsFBvc fVPjex"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-jtXFsC fVJDfL"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link between mentions 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jCHTsB QWJgs"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-bkkgYE loByek sc-haThUj kQXZOa"
      tabindex="0"
    >
      <span
        class="sc-cfJLes fYZCLU"
      >
        <i
          aria-hidden="true"
          class="sc-kTqJeW iGVA-Di"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-kTqJeW iGVA-Di"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-dwsoFP fDfdvp sc-leSMyW ljEqVg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jtXFsC fVJDfL"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-kTqJeW iGVA-Di"
    >
      : 
    </i>
    <span
      class="sc-hmvloj hlERxc"
    >
      hey
       
      <span
        class="sc-dwsoFP fDfdvp sc-gsFBvc fVPjex"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-jtXFsC fVJDfL"
        >
                     
        </span>
      </span>
       see 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-dwsoFP fDfdvp sc-gsFBvc fVPjex"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-jtXFsC fVJDfL"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jCHTsB QWJgs"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-bkkgYE loByek sc-haThUj kQXZOa"
      tabindex="0"
    >
      <span
        class="sc-cfJLes fYZCLU"
      >
        <i
          aria-hidden="true"
          class="sc-kTqJeW iGVA-Di"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-kTqJeW iGVA-Di"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-dwsoFP fDfdvp sc-leSMyW ljEqVg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jtXFsC fVJDfL"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-kTqJeW iGVA-Di"
    >
      : 
    </i>
    <span
      class="sc-hmvloj hlERxc"
    >
      hey
       
      <span
        class="sc-dwsoFP fDfdvp sc-gsFBvc fVPjex"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-jtXFsC fVJDfL"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention before a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jCHTsB QWJgs"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-bkkgYE loByek sc-haThUj kQXZOa"
      tabindex="0"
    >
      <span
        class="sc-cfJLes fYZCLU"
      >
        <i
          aria-hidden="true"
          class="sc-kTqJeW iGVA-Di"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-kTqJeW iGVA-Di"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-dwsoFP fDfdvp sc-leSMyW ljEqVg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jtXFsC fVJDfL"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-kTqJeW iGVA-Di"
    >
      : 
    </i>
    <span
      class="sc-hmvloj hlERxc"
    >
      <span
        class="sc-dwsoFP fDfdvp sc-gsFBvc fVPjex"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-jtXFsC fVJDfL"
        >
                     
        </span>
      </span>
       go to 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention between links 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jCHTsB QWJgs"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-bkkgYE loByek sc-haThUj kQXZOa"
      tabindex="0"
    >
      <span
        class="sc-cfJLes fYZCLU"
      >
        <i
          aria-hidden="true"
          class="sc-kTqJeW iGVA-Di"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-kTqJeW iGVA-Di"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-dwsoFP fDfdvp sc-leSMyW ljEqVg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jtXFsC fVJDfL"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-kTqJeW iGVA-Di"
    >
      : 
    </i>
    <span
      class="sc-hmvloj hlERxc"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-dwsoFP fDfdvp sc-gsFBvc fVPjex"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-jtXFsC fVJDfL"
        >
                     
        </span>
      </span>
       or here 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention of self user 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jCHTsB esBpEf"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-bkkgYE loByek sc-haThUj kQXZOa"
      tabindex="0"
    >
      <span
        class="sc-cfJLes fYZCLU"
      >
        <i
          aria-hidden="true"
          class="sc-kTqJeW iGVA-Di"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-kTqJeW iGVA-Di"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-dwsoFP fDfdvp sc-leSMyW ljEqVg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jtXFsC fVJDfL"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-kTqJeW iGVA-Di"
    >
      : 
    </i>
    <span
      class="sc-hmvloj hlERxc"
    >
      Hey
       
      <span
        class="sc-dwsoFP fDfdvp sc-gsFBvc fVPjex"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-jtXFsC fVJDfL"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with only emoji renders them jumbo-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jCHTsB QWJgs"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-bkkgYE loByek sc-haThUj kQXZOa"
      tabindex="0"
    >
      <span
        class="sc-cfJLes fYZCLU"
      >
        <i
          aria-hidden="true"
          class="sc-kTqJeW iGVA-Di"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-kTqJeW iGVA-Di"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-dwsoFP fDfdvp sc-leSMyW ljEqVg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jtXFsC fVJDfL"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-kTqJeW iGVA-Di"
    >
      : 
    </i>
    <span
      class="sc-hmvloj hlERxc"
    >
      <div
        class="sc-bkkgYE loByek sc-knKKcV dvglrg"
        tabindex="-1"
      >
        <span
          class="sc-cQMBOM iFevVI"
        >
          🔥
        </span>
      </div>
      <div
        class="sc-bkkgYE loByek sc-knKKcV dvglrg"
        tabindex="-1"
      >
        <span
          class="sc-cQMBOM iFevVI"
        >
          🔥
        </span>
      </div>
       
      <div
        class="sc-bkkgYE loByek sc-knKKcV dvglrg"
        tabindex="-1"
      >
        <span
          class="sc-cQMBOM iFevVI"
        >
          🎉
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with too many emoji for jumbo stays inline-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jCHTsB QWJgs"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-bkkgYE loByek sc-haThUj kQXZOa"
      tabindex="0"
    >
      <span
        class="sc-cfJLes fYZCLU"
      >
        <i
          aria-hidden="true"
          class="sc-kTqJeW iGVA-Di"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-kTqJeW iGVA-Di"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-dwsoFP fDfdvp sc-leSMyW ljEqVg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jtXFsC fVJDfL"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-kTqJeW iGVA-Di"
    >
      : 
    </i>
    <span
      class="sc-hmvloj hlERxc"
    >
      <div
        class="sc-bkkgYE loByek sc-knKKcV dvglrg"
        tabindex="-1"
      >
        <span
          class="sc-cQMBOM kvmvRP"
        >
          😀
        </span>
      </div>
      <div
        class="sc-bkkgYE loByek sc-knKKcV dvglrg"
        tabindex="-1"
      >
        <span
          class="sc-cQMBOM kvmvRP"
        >
          😀
        </span>
      </div>
      <div
        class="sc-bkkgYE loByek sc-knKKcV dvglrg"
        tabindex="-1"
      >
        <span
          class="sc-cQMBOM kvmvRP"
        >
          😀
        </span>
      </div>
      <div
        class="sc-bkkgYE loByek sc-knKKcV dvglrg"
        tabindex="-1"
      >
        <span
          class="sc-cQMBOM kvmvRP"
        >
          😀
        </span>
      </div>
      <div
        class="sc-bkkgYE loByek sc-knKKcV dvglrg"
        tabindex="-1"
      >
        <span
          class="sc-cQMBOM kvmvRP"
        >
          😀
        </span>
      </div>
      <div
        class="sc-bkkgYE loByek sc-knKKcV dvglrg"
        tabindex="-1"
      >
        <span
          class="sc-cQMBOM kvmvRP"
        >
          😀
        </span>
      </div>
      <div
        class="sc-bkkgYE loByek sc-knKKcV dvglrg"
        tabindex="-1"
      >
        <span
          class="sc-cQMBOM kvmvRP"
        >
          😀
        </span>
      </div>
      <div
        class="sc-bkkgYE loByek sc-knKKcV dvglrg"
        tabindex="-1"
      >
        <span
          class="sc-cQMBOM kvmvRP"
        >
          😀
        </span>
      </div>
      <div
        class="sc-bkkgYE loByek sc-knKKcV dvglrg"
        tabindex="-1"
      >
        <span
          class="sc-cQMBOM kvmvRP"
        >
          😀
        </span>
      </div>
      <div
        class="sc-bkkgYE loByek sc-knKKcV dvglrg"
        tabindex="-1"
      >
        <span
          class="sc-cQMBOM kvmvRP"
        >
          😀
        </span>
      </div>
      <div
        class="sc-bkkgYE loByek sc-knKKcV dvglrg"
        tabindex="-1"
      >
        <span
          class="sc-cQMBOM kvmvRP"
        >
          😀
        </span>
      </div>
    </span>
  </div>
</div>
`;
